# ComputerVision

./: CMakeLists.txt  ComputerVision.pro  Contrast.cpp  Contrast.h  CppDemo.cpp  CppDemo.h  Distortion.cpp  Distortion.h  Identity.cpp  Identity.h  ImageProcessing.pro  KernelsHandler.cpp  KernelsHandler.h  README.md  Rotate.cpp  Rotate.h  Shift.cpp  Shift.h  constants.h  convolutionaltool.cpp  convolutionaltool.h  convolutiontool.cpp  convolutiontool.h  dataretriver.cpp  dataretriver.h  descriptor.cpp  descriptor.h  descriptorbuilder.cpp  descriptorbuilder.h  helper.cpp  helper.h  imagehandler.cpp  imagehandler.h  imagetoprocess.cpp  imagetoprocess.h  ipworker.cpp  ipworker.h  main.cpp  mainform.cpp  mainform.h  (+18 more)
